--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "dependencies": {
     "express": "3.x",
     "nodemailer": "~0.7.1",
-    "paypal-rest-sdk": "~1.6.8"
+    "paypal-rest-sdk": "~1.6.8",
+    "google-spreadsheet": "~2.0.1"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
